app/assets/stylesheets/pages.scss
body {
//  font-family: 'Fauna One', serif;
}

b {
  color:#00B3AB;
}

.content {
  margin-top: 75px;
}

.search_header {
  margin-top: 175px;
}

.search_container {
	margin: 30px 0 50px 0;
  .search-query {
    height: 34px;
    margin: 0 18px 0 5px;
  }
}

ul.search_filters {
	list-style-type: none;
	li {
		display: inline-block;
		width: 30%;
	}
}

.center {
	text-align: center;
}

input[type="radio"] {
	display: none;
}

span.badge {
	font-size: 20px;
	line-height: 28px;
}

